--- a/eda_and_model.ipynb
+++ b/eda_and_model.ipynb
@@ -277,6 +277,245 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "615609ad-e235-4ee2-90f7-670df26161a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                       Non-Null Count  Dtype   \n",
+      "---  ------                       --------------  -----   \n",
+      " 0   transaction_id               10000 non-null  int64   \n",
+      " 1   amount                       10000 non-null  float64 \n",
+      " 2   foreign_transaction          10000 non-null  int64   \n",
+      " 3   location_mismatch            10000 non-null  int64   \n",
+      " 4   device_trust_score           10000 non-null  int64   \n",
+      " 5   velocity_last_24h            10000 non-null  int64   \n",
+      " 6   cardholder_age               10000 non-null  int64   \n",
+      " 7   is_fraud                     10000 non-null  int64   \n",
+      " 8   amount_bin                   10000 non-null  category\n",
+      " 9   hour_sin                     10000 non-null  float64 \n",
+      " 10  hour_cos                     10000 non-null  float64 \n",
+      " 11  merchant_category_frequency  10000 non-null  int64   \n",
+      " 12  mcc_Clothing                 10000 non-null  bool    \n",
+      " 13  mcc_Electronics              10000 non-null  bool    \n",
+      " 14  mcc_Food                     10000 non-null  bool    \n",
+      " 15  mcc_Grocery                  10000 non-null  bool    \n",
+      " 16  mcc_Travel                   10000 non-null  bool    \n",
+      "dtypes: bool(5), category(1), float64(3), int64(8)\n",
+      "memory usage: 918.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a8e7bb23-70b2-4d2a-863d-854c3f031c92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>foreign_transaction</th>\n",
+       "      <th>location_mismatch</th>\n",
+       "      <th>device_trust_score</th>\n",
+       "      <th>velocity_last_24h</th>\n",
+       "      <th>cardholder_age</th>\n",
+       "      <th>is_fraud</th>\n",
+       "      <th>hour_sin</th>\n",
+       "      <th>hour_cos</th>\n",
+       "      <th>merchant_category_frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>1.000000e+04</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5000.50000</td>\n",
+       "      <td>175.949849</td>\n",
+       "      <td>0.097800</td>\n",
+       "      <td>0.085700</td>\n",
+       "      <td>61.798900</td>\n",
+       "      <td>2.008900</td>\n",
+       "      <td>43.468700</td>\n",
+       "      <td>0.015100</td>\n",
+       "      <td>-0.013534</td>\n",
+       "      <td>-7.013808e-04</td>\n",
+       "      <td>2002.031400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2886.89568</td>\n",
+       "      <td>175.392827</td>\n",
+       "      <td>0.297059</td>\n",
+       "      <td>0.279935</td>\n",
+       "      <td>21.487053</td>\n",
+       "      <td>1.432559</td>\n",
+       "      <td>14.979147</td>\n",
+       "      <td>0.121957</td>\n",
+       "      <td>0.709571</td>\n",
+       "      <td>7.045748e-01</td>\n",
+       "      <td>63.942967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>1923.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2500.75000</td>\n",
+       "      <td>50.905000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.707107</td>\n",
+       "      <td>-7.071068e-01</td>\n",
+       "      <td>1944.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5000.50000</td>\n",
+       "      <td>122.095000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.836970e-16</td>\n",
+       "      <td>1990.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7500.25000</td>\n",
+       "      <td>242.480000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.707107</td>\n",
+       "      <td>7.071068e-01</td>\n",
+       "      <td>2050.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>1471.040000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>2093.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       transaction_id        amount  foreign_transaction  location_mismatch  \\\n",
+       "count     10000.00000  10000.000000         10000.000000       10000.000000   \n",
+       "mean       5000.50000    175.949849             0.097800           0.085700   \n",
+       "std        2886.89568    175.392827             0.297059           0.279935   \n",
+       "min           1.00000      0.000000             0.000000           0.000000   \n",
+       "25%        2500.75000     50.905000             0.000000           0.000000   \n",
+       "50%        5000.50000    122.095000             0.000000           0.000000   \n",
+       "75%        7500.25000    242.480000             0.000000           0.000000   \n",
+       "max       10000.00000   1471.040000             1.000000           1.000000   \n",
+       "\n",
+       "       device_trust_score  velocity_last_24h  cardholder_age      is_fraud  \\\n",
+       "count        10000.000000       10000.000000    10000.000000  10000.000000   \n",
+       "mean            61.798900           2.008900       43.468700      0.015100   \n",
+       "std             21.487053           1.432559       14.979147      0.121957   \n",
+       "min             25.000000           0.000000       18.000000      0.000000   \n",
+       "25%             43.000000           1.000000       30.000000      0.000000   \n",
+       "50%             62.000000           2.000000       44.000000      0.000000   \n",
+       "75%             80.000000           3.000000       56.000000      0.000000   \n",
+       "max             99.000000           9.000000       69.000000      1.000000   \n",
+       "\n",
+       "           hour_sin      hour_cos  merchant_category_frequency  \n",
+       "count  10000.000000  1.000000e+04                 10000.000000  \n",
+       "mean      -0.013534 -7.013808e-04                  2002.031400  \n",
+       "std        0.709571  7.045748e-01                    63.942967  \n",
+       "min       -1.000000 -1.000000e+00                  1923.000000  \n",
+       "25%       -0.707107 -7.071068e-01                  1944.000000  \n",
+       "50%        0.000000 -1.836970e-16                  1990.000000  \n",
+       "75%        0.707107  7.071068e-01                  2050.000000  \n",
+       "max        1.000000  1.000000e+00                  2093.000000  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "024da2c0",
    "metadata": {
